# ScooterAnalysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1
db/: 01_reset_ve_kurulum.sql  02_false_fault.sql  03_pre_data_reset_check.sql  04_reset_operational_data.sql  05_post_data_reset_check.sql  06_vehicle_status.sql  07_signal_rulebook_revision.sql
docs/: 2026-07-13-temizlik-plani.md
src/binbin/: __init__.py  config.py
src/binbin/api/: app.py
src/binbin/cli/: __main__.py  main.py
src/binbin/core/: analysis.py  classifier.py  false_fault.py  keywords.py  scenario_analysis.py  signal_audit.py
src/binbin/data/: assess.py  classify.py  engine.py  ingest.py  ingest_status.py  mock_source.py  postgres_repo.py  queries.py  repository.py  schema.py
src/binbin/domain/: enums.py  models.py
src/binbin/reporting/: charts.py  format.py  report.py
tests/: test_analysis.py  test_backend_hardening.py  test_charts.py  test_classifier.py  test_cli_selection.py  test_false_fault.py  test_ingest_status.py  test_reset_scripts.py  test_run_script.py  test_scenario_analysis.py  test_scenario_charts.py  test_signal_audit.py
